# docs/swagger.json
@@ -56,7 +56,7 @@
                 }
             }
         },
-        "/projects/{project}": {
+        "/projects/{projectId}": {
             "get": {
                 "description": "Gets projects details.",
                 "consumes": [
@@ -73,7 +73,7 @@
                     {
                         "type": "string",
                         "description": "Project ID",
-                        "name": "project",
+                        "name": "projectId",
                         "in": "path",
                         "required": true
                     }
@@ -126,7 +126,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/resources.CreateResourceRequest"
+                            "$ref": "#/definitions/rest.CreateResourceRequest"
                         }
                     }
                 ],
@@ -158,7 +158,7 @@
                 }
             }
         },
-        "/resources/{project}/{language}/{semver}": {
+        "/resources/{projectId}/{languageId}/{semver}": {
             "get": {
                 "description": "Gets the latest resource given a semver.",
                 "consumes": [
@@ -175,14 +175,14 @@
                     {
                         "type": "string",
                         "description": "Project ID",
-                        "name": "project",
+                        "name": "projectId",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "language tag",
-                        "name": "language",
+                        "name": "languageId",
                         "in": "path",
                         "required": true
                     },
@@ -237,14 +237,14 @@
                     {
                         "type": "string",
                         "description": "Project ID",
-                        "name": "project",
+                        "name": "projectId",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "language tag",
-                        "name": "language",
+                        "name": "languageId",
                         "in": "path",
                         "required": true
                     },
@@ -281,7 +281,7 @@
                 }
             }
         },
-        "/versions/{project}/{language}": {
+        "/versions/{projectId}/{languageId}": {
             "get": {
                 "description": "Gets available versions for a resource.",
                 "consumes": [
@@ -298,14 +298,14 @@
                     {
                         "type": "string",
                         "description": "Project ID",
-                        "name": "project",
+                        "name": "projectId",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "language tag",
-                        "name": "language",
+                        "name": "languageId",
                         "in": "path",
                         "required": true
                     }
@@ -370,32 +370,6 @@
                 }
             }
         },
-        "resources.CreateResourceRequest": {
-            "type": "object",
-            "required": [
-                "language",
-                "project",
-                "values",
-                "version"
-            ],
-            "properties": {
-                "language": {
-                    "type": "string"
-                },
-                "project": {
-                    "type": "string"
-                },
-                "values": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                },
-                "version": {
-                    "type": "string"
-                }
-            }
-        },
         "rest.CreateProjectRequest": {
             "type": "object",
             "required": [
@@ -408,6 +382,32 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "rest.CreateResourceRequest": {
+            "type": "object",
+            "required": [
+                "languageId",
+                "projectId",
+                "semver",
+                "values"
+            ],
+            "properties": {
+                "languageId": {
+                    "type": "string"
+                },
+                "projectId": {
+                    "type": "string"
+                },
+                "semver": {
+                    "type": "string"
+                },
+                "values": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -436,10 +436,13 @@
                 "id": {
                     "type": "string"
                 },
-                "language": {
+                "languageId": {
                     "type": "string"
                 },
-                "project": {
+                "projectId": {
+                    "type": "string"
+                },
+                "semver": {
                     "type": "string"
                 },
                 "values": {
@@ -447,9 +450,6 @@
                     "additionalProperties": {
                         "type": "string"
                     }
-                },
-                "version": {
-                    "type": "string"
                 }
             }
         }
