# resources/schema.go
@@ -8,29 +8,29 @@ import (
 )
 
 type Resource struct {
-	ID       string            `db:"id" json:"id"`
-	Project  string            `db:"project" json:"project" validate:"required,min=1,max=20"`
-	Language string            `db:"language" json:"language" validate:"required,min=1,max=20"`
-	SemVer   string            `db:"sem_ver" json:"semVer" validate:"required,min=5,max=50"`
-	Values   map[string]string `db:"values" json:"values"`
-	Created  time.Time         `db:"created" json:"created"`
-	Enabled  bool              `db:"enabled" json:"enabled"`
+	ID         string            `db:"id"`
+	ProjectID  string            `db:"project" validate:"required,min=1,max=20"`
+	LanguageID string            `db:"language" validate:"required,min=1,max=20"`
+	SemVer     string            `db:"sem_ver" validate:"required,min=5,max=50"`
+	Values     map[string]string `db:"values"`
+	Created    time.Time         `db:"created"`
+	Enabled    bool              `db:"enabled"`
 }
 
-func newResource(
-	project string,
-	language string,
+func NewResource(
+	projectID string,
+	languageID string,
 	semVer string,
 	values map[string]string,
 ) *Resource {
 	return &Resource{
-		ID:       uuid.New().String(),
-		Project:  project,
-		Language: language,
-		SemVer:   semVer,
-		Values:   values,
-		Enabled:  true,
-		Created:  time.Now(),
+		ID:         uuid.New().String(),
+		ProjectID:  projectID,
+		LanguageID: languageID,
+		SemVer:     semVer,
+		Values:     values,
+		Enabled:    true,
+		Created:    time.Now(),
 	}
 }
 
