# rest/get_resource.go
@@ -11,26 +11,23 @@ import (
 //	@Tags			Resources
 //	@Accept			json
 //	@Produce		json
-//	@Param			project		path		string			true	"Project ID"
-//	@Param			language	path		string			true	"language tag"
+//	@Param			projectId	path		string			true	"Project ID"
+//	@Param			languageId	path		string			true	"language tag"
 //	@Param			semver		path		string			true	"Sem version, you can use wildcards + or *"
 //	@Success		200			{object}	Resource		"Resource"
 //	@Failure		400			{object}	errs.Validation	"Bad Request"
 //	@Failure		404			{object}	errs.Custom		"Not Found"
 //	@Failure		500			{object}	errs.Custom		"Internal Server Error"
-//	@Router			/resources/{project}/{language}/{semver} [get]
+//	@Router			/resources/{projectId}/{languageId}/{semver} [get]
 //
 // Gets the last resource.
 func initGetResources(engine *gin.Engine) {
-	engine.GET(
-		"/resources/:project/:language/:semver",
-		getResource,
-	)
+	engine.GET("/resources/:projectId/:languageId/:semver", getResource)
 }
 
 func getResource(c *gin.Context) {
-	project := c.Param("project")
-	language := c.Param("language")
+	project := c.Param("projectId")
+	language := c.Param("languageId")
 	semver := c.Param("semver")
 
 	resource, err := resources.GetLastResource(server.GinLogFields(c), project, language, semver)
@@ -41,18 +38,18 @@ func getResource(c *gin.Context) {
 	}
 
 	c.JSON(200, &Resource{
-		ID:       resource.ID,
-		Project:  resource.Project,
-		Language: resource.Language,
-		SemVer:   resource.SemVer,
-		Values:   resource.Values,
+		ID:         resource.ID,
+		ProjectID:  resource.ProjectID,
+		LanguageID: resource.LanguageID,
+		SemVer:     resource.SemVer,
+		Values:     resource.Values,
 	})
 }
 
 type Resource struct {
-	ID       string            `json:"id"`
-	Project  string            `json:"project"`
-	Language string            `json:"language"`
-	SemVer   string            `json:"version"`
-	Values   map[string]string `json:"values"`
+	ID         string            `json:"id"`
+	ProjectID  string            `json:"projectId"`
+	LanguageID string            `json:"languageId"`
+	SemVer     string            `json:"semver"`
+	Values     map[string]string `json:"values"`
 }
